syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service2";
option java_outer_classname = "Service2Impl";

package service2;

// Interface exported by the server.
service SmartManagement {
  // Unary
  rpc smartTableBooking (TableRequest) returns (TableResponse) {}
  // Client Streaming
  rpc smartQ (stream qRequest) returns (qResponse) {}
  // Server Streaming
  rpc smartView (viewRequest) returns (stream viewResponse) {}
}

message TableRequest {
  int32 tableInput = 1;
  double timeInput = 2;
}

message TableResponse {
  string tableOutput = 1;
  double timeOutput = 2;
}

message qRequest {
  string qOrder = 1;
  int32 time = 2;
}

message qResponse {
  string qSuccessful = 1;
}

message viewRequest {
  string bookingsRequest = 1;
}

message viewResponse {
  string bookingsTotal = 1;
}